[gd_scene load_steps=13 format=3 uid="uid://ei0gt35qrh21"]

[ext_resource type="Script" uid="uid://bw4judxn22kvc" path="res://script/levels_menu.gd" id="1_augb3"]
[ext_resource type="Texture2D" uid="uid://wjbr8rl8ams0" path="res://materials/Progetto senza titolo (1).png" id="1_fpmk7"]
[ext_resource type="FontFile" uid="uid://bjmfgovkx7cju" path="res://materials/SuperLobster.ttf" id="2_svern"]
[ext_resource type="FontFile" uid="uid://dbov3l412oum1" path="res://materials/Super Lobster.ttf" id="3_e4bqk"]
[ext_resource type="Texture2D" uid="uid://bqdi4r03efm15" path="res://materials/40e4425fc69645b70fbe78a1d814ee93-removebg-preview.png" id="4_augb3"]
[ext_resource type="PackedScene" uid="uid://bexs8rmbamxcl" path="res://scene/menu_difficoltà.tscn" id="6_may2b"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fyl7c"]
texture = ExtResource("4_augb3")
region_rect = Rect2(295, 150, 253, 79)
modulate_color = Color(0.62, 0.62, 0.62, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6ym5a"]
texture = ExtResource("4_augb3")
region_rect = Rect2(295, 149.78, 253, 79.25)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5f8d8"]
texture = ExtResource("4_augb3")
region_rect = Rect2(295, 150, 253, 79)
modulate_color = Color(0.619608, 0.619608, 0.619608, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ahlfw"]
texture = ExtResource("4_augb3")
region_rect = Rect2(295, 150, 253, 79)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3xd5s"]
texture = ExtResource("4_augb3")
region_rect = Rect2(295, 150, 253, 79)
modulate_color = Color(0.619608, 0.619608, 0.619608, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p40jx"]
texture = ExtResource("4_augb3")
region_rect = Rect2(295, 150, 253, 79)

[node name="levels_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_augb3")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_fpmk7")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 200

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 15
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("2_svern")
theme_override_font_sizes/font_size = 90
text = "Livelli"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Separator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Level1_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(295.7, 32)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("3_e4bqk")
theme_override_font_sizes/font_size = 60
theme_override_styles/hover = SubResource("StyleBoxTexture_fyl7c")
theme_override_styles/normal = SubResource("StyleBoxTexture_6ym5a")
action_mode = 0
text = "Colazione"

[node name="Level2_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 32)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("3_e4bqk")
theme_override_font_sizes/font_size = 60
theme_override_styles/hover = SubResource("StyleBoxTexture_5f8d8")
theme_override_styles/normal = SubResource("StyleBoxTexture_ahlfw")
action_mode = 0
text = "Pranzo"

[node name="Level3_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(177.045, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("3_e4bqk")
theme_override_font_sizes/font_size = 60
theme_override_styles/hover = SubResource("StyleBoxTexture_3xd5s")
theme_override_styles/normal = SubResource("StyleBoxTexture_p40jx")
action_mode = 0
text = "Cena"

[node name="Separator" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Back_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 68.63)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("3_e4bqk")
theme_override_font_sizes/font_size = 45
theme_override_styles/hover = SubResource("StyleBoxTexture_3xd5s")
theme_override_styles/normal = SubResource("StyleBoxTexture_p40jx")
action_mode = 0
text = "Indietro"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="menu difficoltà" parent="CanvasLayer" instance=ExtResource("6_may2b")]
visible = false
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Level1_button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Level2_button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Level3_button" to="." method="_on_level_3_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Back_button" to="." method="_on_back_button_pressed"]
[connection signal="difficile" from="CanvasLayer/menu difficoltà" to="." method="_on_menu_difficoltà_difficile"]
[connection signal="facile" from="CanvasLayer/menu difficoltà" to="." method="_on_menu_difficoltà_facile"]
[connection signal="medio" from="CanvasLayer/menu difficoltà" to="." method="_on_menu_difficoltà_medio"]
